--- a/requirements.txt
+++ b/requirements.txt
@@ -1,120 +1,8 @@
-SQLAlchemy
-SecretStorage
-Twisted
-aiopg
-appdirs
-argcomplete
-argh
-astrodendro
-astropy
-attrs
-backcall
-bcrypt
-beautifulsoup4
-blessings
-bpython
-certifi
-chardet
-click
-cloudpickle
-colorama
-configobj
-constantly
-cov-core
-coverage
-cryptography
-curtsies
-cwcwidth
-cycler
-dask
-decorator
-defer
-defusedxml
-dill
-distlib
-distro
-docutils
-echo
-et-xmlfile
-evdev
-fast-histogram
-filelock
-fsspec
-glue-core
-gpg
-greenlet
-html5lib
-httplib2
-hyperlink
-hypothesis
-idna
-imageio
-importlib-metadata
-incremental
-iniconfig
-jeepney
-joblib
-jsonschema
-launchpadlib
-lazr.restfulclient
-lazr.uri
-libvirt-python
-locket
-louis
-lxml
-macaroonbakery
-matplotlib
-meld
-numpy
-oauthlib
-odfpy
-olefile
-openpyxl
-packaging
-pandas
-parso
-partd
-pbr
-pexpect
-pickleshare
-psycogreen
-psycopg2
-py
-py-postgresql
-pyOpenSSL
-pyRFC3339
-pyasn1
-pyasn1-modules
-pycairo
-pycups
-pydbus
-pyenchant
-pyerfa
-pymacaroons
-pyparsing
-pyrsistent
-pysvn
-relational
-schedule
-scikit-image
-scipy
-tifffile
-toml
-toolz
-tornado
-traitlets
-typedload
-urllib3
-wadllib
-watchdog
-wcwidth
-webencodings
-wheel
-widgetsnbextension
-xdg
-xlrd
-xlwt
-zipp
-zope.interface
-fernet
-cx_oracle
+SQLAlchemy==1.4.29
+pandas==1.3.5
+numpy==1.22.0
+openpyxl==3.0.9
+psycopg-binary==3.0.8
+py-postgresql==1.2.2
+schedule==1.1.0
+fernet==1.0.1
