--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-SQLAlchemy==1.4.29
-pandas==1.3.5
-numpy==1.22.0
+# SQLAlchemy==1.4.29
+# pandas==1.3.5
+# numpy==1.22.0
 openpyxl==3.0.9
-psycopg-binary==3.0.8
+# psycopg2-binary==2.9.3
 py-postgresql==1.2.2
-schedule==1.1.0
+# schedule==1.1.0
 fernet==1.0.1
